<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="#C8EAEC">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etEmployeeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Name"
            android:background="@android:drawable/edit_text"
            android:hint="@string/employee_name"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColorHint="#757575"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints="emailAddress"
            android:background="@android:drawable/edit_text"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColorHint="#757575"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/etPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:background="@android:drawable/edit_text"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:padding="10dp"
            android:textColorHint="#757575"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/etAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:drawable/edit_text"
            android:hint="@string/address"
            android:inputType="textPostalAddress"
            android:padding="10dp"
            android:textColorHint="#757575"
            tools:ignore="VisualLintTextFieldSize" />

        <Spinner
            android:id="@+id/spinnerDesignation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:minHeight="48dp" />

        <Spinner
            android:id="@+id/spinnerDepartment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/btnSaveEmployee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_employee"
            android:background="#34729C"
            android:textColor="#FFFFFF"
            android:padding="10dp"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            tools:ignore="VisualLintButtonSize" />

    </LinearLayout>
</ScrollView>
